--- a/index.html
+++ b/index.html
@@ -14,7 +14,23 @@
 
 				<h4 class="SubTitle">Are you ready to challenge the Machine ?</h4>
 			</div>
-
+			<div class="Scoreboard">
+				<h2>Scoreboard</h2>
+				<table>
+					<tbody>
+						<tr>
+							<td id="playerScore">0</td>
+							<td id="computerScore">0</td>
+						</tr>
+					</tbody>
+					<tfoot>
+						<tr>
+							<th>You</th>
+							<th>Computer</th>
+						</tr>
+					</tfoot>
+				</table>
+			</div>
 			<div class="Tools">
 				<span id="Paper" onclick="game('paper')"
 					><img src="img/Paper.png" alt="Paper"
@@ -26,13 +42,13 @@
 					><img src="img/Scissors.png" alt="Scissor"
 				/></span>
 			</div>
-
+			<div id="status"></div>
 			<div class="footer">
 				<small class="block"
 					><br />
 					Designed &amp; Developed by
-					<a href="https://www.facebook.com/zakaria.salmi.1999" target="_blank"
-						>Zacks</a
+					<a href="https://github.com/ZacksCodes" target="_blank"
+						>ZacksCodes</a
 					></small
 				>
 			</div>
